# coronavirus-webscraper-api

./: .env.example  app.py  database.py  model.py  pyproject.toml  readme.md  writeDB.py
